--- a/styles/globals.css
+++ b/styles/globals.css
@@ -65,18 +65,18 @@ width: 100%;
     margin-left: 6px;
 }
 .logo{
-  font-size: 22px;
+  font-size: 28px;
   font-weight: 500;
   cursor: pointer;
 
 }
 .nav-link{
-  color: grey;
-  font-size: 20px;
+  color: black;
+  font-size: 24px;
 }
 .cart-icon{
-  font-size: 25px;
-  color: gray;
+  font-size: 28px;
+  color: black;
   cursor: pointer;
   position: relative;
   transition: transform .4s ease;
